@@ -1,45 +1,38 @@
+plugins {
+    id 'pl.allegro.tech.build.axion-release' version '1.17.2'
+    id 'groovy'
+    id 'java'
+    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
+}
 
-buildscript {
-    repositories {
-        mavenCentral()
-        maven { url "https://oss.sonatype.org/content/groups/public"}
+group 'org.rundeck.plugins'
+
+ext.publishName = "Http Notification ${project.version}"
+ext.githubSlug = 'rundeck-plugins/http-notification'
+ext.developers = [
+        [id: 'gschueler', name: 'Greg Schueler', email: 'greg@rundeck.com']
+]
+
+scmVersion {
+    ignoreUncommittedChanges = false
+    tag {
+        prefix = ''           // NO "v" prefix - see PLUGIN_TAGGING_ARCHITECTURE.md
+        versionSeparator = ''
     }
 }
 
-plugins {
-    id 'pl.allegro.tech.build.axion-release' version '1.13.4'
+version = scmVersion.version  // Dynamic version from git tag
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+    withSourcesJar()
+    withJavadocJar()
 }
-
-group 'com.rundeck.plugin'
-
-apply plugin: 'pl.allegro.tech.build.axion-release'
-apply plugin: 'groovy'
-apply plugin: 'java'
-
-sourceCompatibility = 11
 ext.rundeckPluginVersion = '1.2'
 ext.pluginClassNames='com.rundeck.plugin.HttpNotificationPlugin'
 ext.pluginName = 'Http Notification'
 ext.pluginDescription = 'A notification plugin that makes HTTP requests'
-
-
-scmVersion {
-    ignoreUncommittedChanges = true
-    tag {
-        prefix = ''
-        versionSeparator = ''
-        def origDeserialize=deserialize
-        //apend .0 to satisfy semver if the tag version is only X.Y
-        deserialize = { config, position, tagName ->
-            def orig = origDeserialize(config, position, tagName)
-            if (orig.split('\\.').length < 3) {
-                orig += ".0"
-            }
-            orig
-        }
-    }
-}
-project.version = scmVersion.version
 
 configurations{
     //declare custom pluginLibs configuration to include only libs for this plugin
@@ -52,54 +45,55 @@ configurations{
 }
 
 repositories {
-    mavenCentral()
     mavenLocal()
-    maven { url 'https://jitpack.io' }
-
+    maven {
+        name = 'Central Portal Snapshots'
+        url = 'https://central.sonatype.com/repository/maven-snapshots/'
+        content {
+            includeGroup('org.rundeck')
+        }
+    }
+    maven {
+        name = "PackageCloudTest"
+        url = uri("https://packagecloud.io/pagerduty/rundeckpro-test/maven2")
+        content {
+            includeGroup('org.rundeck.plugins')
+        }
+    }
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'org.rundeck:rundeck-core:5.14.0-rc1-20250722'
-
-    pluginLibs ('com.github.rundeck-plugins:http-step:1.1.6'){
-        exclude group: 'org.rundeck', module: 'rundeck-core'
-    }
-
-    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
-    implementation 'org.codehaus.groovy:groovy-all:3.0.9'
+    implementation 'org.apache.groovy:groovy-all:4.0.29'
+    compileOnly 'org.rundeck:rundeck-core:6.0.0-alpha1-20260407'
+    testImplementation 'org.rundeck:rundeck-core:6.0.0-alpha1-20260407'
     
-    // Add secure commons-lang3 to provide alternative to vulnerable commons-lang 2.6
-    implementation 'org.apache.commons:commons-lang3:3.18.0'
-
-    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
-
-    testImplementation "org.codehaus.groovy:groovy-all:3.0.17"
-    testImplementation "org.spockframework:spock-core:2.0-groovy-3.0"
-    testImplementation "cglib:cglib-nodep:2.2.2"
-    testImplementation 'org.objenesis:objenesis:1.4'
-
-}
-
-configurations.all {
-    resolutionStrategy {
-        // Replace vulnerable commons-lang with secure commons-lang3
-        dependencySubstitution {
-            substitute module('commons-lang:commons-lang') using module('org.apache.commons:commons-lang3:3.18.0')
-        }
+    // Apache HTTP client dependencies for compilation (http-step bundles these but doesn't expose them transitively)
+    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
+    // Version 3.18.0 fixes CVE-2025-48924 (StackOverflowError in ClassUtils)
+    implementation 'org.apache.commons:commons-lang3:3.20.0'
+    
+    // Bundle http-step plugin in lib/ directory for runtime
+    // Use transitive=false to avoid duplicating dependencies already bundled in http-step JAR
+    pluginLibs ('org.rundeck.plugins:http-step:1.1.20-grails7') {
+        transitive = false
     }
-}
 
-
-// task to copy plugin libs to output/lib dir
-task copyToLib(type: Copy) {
-    into "$buildDir/output/lib"
-    from configurations.pluginLibs
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation "org.apache.groovy:groovy-all:4.0.29"
+    testImplementation "org.spockframework:spock-core:2.4-groovy-4.0"
+    testImplementation "net.bytebuddy:byte-buddy:1.14.11"
+    testImplementation 'org.objenesis:objenesis:3.4'
 }
 
 
 
 jar {
-    from "$buildDir/output"
+    // Include plugin dependencies in lib/ directory
+    into('lib') {
+        from configurations.pluginLibs
+    }
+    
     manifest {
         def libList = configurations.pluginLibs.collect{'lib/' + it.name}.join(' ')
         attributes 'Rundeck-Plugin-Name' : pluginName
@@ -115,13 +109,28 @@ jar {
         attributes 'Rundeck-Plugin-Archive': 'true'
         attributes 'Rundeck-Plugin-Libs': "${libList}"
     }
-    dependsOn(copyToLib)
 }
 
-
-//set jar task to depend on copyToLib
-jar.dependsOn(copyToLib)
-
-tasks.withType(Test) {
-    useJUnitPlatform()
+test {
+    useJUnit()
+    
+    // Java 17+ module access for reflection/mocking
+    jvmArgs = [
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+        '--add-opens=java.base/java.net=ALL-UNNAMED'
+    ]
 }
+
+nexusPublishing {
+    packageGroup = 'org.rundeck.plugins'
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
+        }
+    }
+}
+
+apply from: "${rootDir}/gradle/publishing.gradle"
